--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -40,6 +40,10 @@ ja:
         opponent_team_name: 対戦チーム名
         tournament_name: 大会名
         other: その他
+      game_request:
+        contact_address: 連絡先
+        comment: コメント
+        image: LINEQRコード等
     models:
       user: ユーザー
   devise:
