スケジュール管理からチームメンバー表示名変更機能の実装

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -44,6 +44,8 @@ ja:
         contact_address: 連絡先
         comment: コメント
         image: LINEQRコード等
+      team_member:
+        display_name: 表示名
     models:
       user: ユーザー
   devise:
